# AscendProjects

./: CONTRIBUTING_CN.md  CONTRIBUTING_EN.md  README.md
best_practices/contrib/RT-GazeEstimation/: Readme.md
best_practices/contrib/XRay/: README.md
best_practices/contrib/part_detection/: 1.5_requirements.txt  1.8_requirements.txt  README.md  export.py  fusion_result.json  model.yaml  onnx_requirements.txt  pth2onnx.sh  public_address_statement.md  train.py  val.py
cplusplus/: README.md
cplusplus/common/acllite/: README.md  README_EN.md
cplusplus/common/presenteragent/: README_CN.md
cplusplus/contrib/AI_painting/: README.md  README_CN.md
cplusplus/contrib/Ascbot/: README.md  README_CN.md
cplusplus/contrib/HandWrite/: README.md  README_CN.md
cplusplus/contrib/TextRecognize/: README.md  README_CN.md
cplusplus/contrib/ar_shadowgan/: README.md  README_CN.md
cplusplus/contrib/cartoonGAN_picture/: README.md  README_CN.md
cplusplus/contrib/gesturedetection/: README.md  README_CN.md
cplusplus/contrib/human_segmentation/: README.md  README_CN.md
cplusplus/contrib/robots_car/: README_CN.md
cplusplus/contrib/super_resolution/: README.md  README_CN.md
cplusplus/environment/: catenation_environmental_guidance.md  catenation_environmental_guidance_CN.md  separate_environmental_guidance.md  separate_environmental_guidance_CN.md
cplusplus/level1_single_api/6_media/1_camera/camera_sample/: CMakeLists.txt  README.md  main.c  vi_with_sensor.c  vi_with_sensor.h
cplusplus/level1_single_api/6_media/1_camera/camera_sample/common/: image_dump_util.c  image_dump_util.h  sample_comm.h  sample_comm_isp.c  sample_comm_isp.h  sample_comm_vi.c  sample_comm_vi.h
cplusplus/level1_single_api/6_media/1_camera/camera_sample/sensor/: CMakeLists.txt
cplusplus/level1_single_api/6_media/1_camera/camera_sample/sensor/include/: hi_sns_ctrl.h
cplusplus/level1_single_api/6_media/1_camera/camera_sample/sensor/sony_imx219/: CMakeLists.txt  imx219_cfgs.h  imx219_cmos.c  imx219_cmos.h  imx219_cmos_ex.h  imx219_sensor_ctl.c
cplusplus/level1_single_api/6_media/1_camera/camera_sample/sensor/sony_imx477/: CMakeLists.txt  imx477_cmos.c  imx477_cmos.h  imx477_cmos_ex.h  imx477_config.h  imx477_sensor_ctl.c
cplusplus/level1_single_api/6_media/1_camera/camera_sample/sensor_sample/: sensor_management.c  sensor_management.h  sony_imx219_config.h  sony_imx477_config.h
cplusplus/level1_single_api/6_media/1_hdmi/hdmi_gitee/: CMakeLists.txt  README.md  hi_mpi_vo.c  sample_hdmi.c
cplusplus/level1_single_api/6_media/1_hdmi/hdmi_gitee/include/: vo_comm.h
cplusplus/level1_single_api/6_media/1_mipitx/raspberry_sample/: CMakeLists.txt  README.md  raspberry_demo.c
cplusplus/level1_single_api/6_media/1_mipitx/raspberry_sample/include/: func.h  hi_mipi_tx.h  vo_comm.h
cplusplus/level1_single_api/6_media/1_mipitx/raspberry_sample/src/: vo_init.c  vo_mem.c  vo_mipitx.c
cplusplus/level1_single_api/7_dvpp/nvr_sample/: CMakeLists.txt  readme.md
cplusplus/level1_single_api/7_dvpp/nvr_sample/include/: sample_comm.h
cplusplus/level1_single_api/7_dvpp/nvr_sample/src/: sample_comm_region.cpp  sample_comm_sys.cpp  sample_comm_vdec.cpp  sample_comm_vo.cpp  sample_comm_vpss.cpp  sample_nvr.cpp
cplusplus/level1_single_api/7_dvpp/nvr_sample/src/region_param/: region_param_parser.cpp  region_param_parser.h  region_param_parser_ext.cpp  region_param_parser_ext.h
cplusplus/level1_single_api/7_dvpp/nvr_sample/stub/: mpi_hdmi_stub.cpp  mpi_vo_stub.cpp  mpi_vpss_stub.cpp
docs/: CHANGELOG.md  INSTALL_cn.md
growthpath/junior-level/1_overview_of_AscendCL/: README_CN.md
growthpath/junior-level/2_quick_start/: README_CN.md
growthpath/junior-level/3_model_conversion/: README_CN.md
growthpath/junior-level/4_model_processing_module/: README_CN.md
growthpath/junior-level/5_data_preprocessing_module/: README_CN.md
growthpath/junior-level/7_sample_explanation/: README_CN.md
inference/: README.md
inference/ACLHelloWorld/: README.md
inference/acllite/: README.md
inference/acllite/cplusplus/: API.md  README.md
inference/acllite/python/: API.md  README.md  acllite_imageproc.py  acllite_model.py  dvpp_vdec.py
inference/contributeSamples/contrib/: README_CN.md
inference/modelInference/: README_CN.md
inference/modelInference/sampleCarColor/: README.md
operator/: README.md
operator/AddCustomSample/: README.md
operator/AddcdivCustomSample/: README.md
operator/HelloWorldSample/: CMakeLists.txt  README.md  hello_world.cpp  main.cpp  run.sh
operator/LeakyReluCustomSample/: README.md
operator/LeakyReluCustomSample/FrameworkLaunch/LeakyReluCustom/framework/tf_plugin/: CMakeLists.txt  tensorflow_leaky_relu_custom_plugin.cc
python/environment/: README.md  README_CN.md
robot/ascend_car/: readme.md
robot/ascend_car/Ascend-智能车主控ROS2源码及说明/Ascend_ws/src/voice/voice_control/: CMakeLists.txt  VoiceAutoStart_Raspberry.sh  package.xml
robot/ascend_car/Ascend-智能车主控ROS2源码及说明/Ascend_ws/src/voice/voice_control/audio/: vvui_deno.pcm
robot/ascend_car/Ascend-智能车主控ROS2源码及说明/Ascend_ws/src/voice/voice_control/config/msc/res/asr/GrmBuilld/temp/: call.g  call_16K
robot/ascend_car/Ascend-智能车主控ROS2源码及说明/Ascend_ws/src/voice/voice_control/include/: basedriver.h
robot/ascend_car/Ascend-智能车主控ROS2源码及说明/Ascend_ws/src/voice/voice_control/launch/: voice_control_launch.py
robot/ascend_car/Ascend-智能车主控ROS2源码及说明/Ascend_ws/src/voice/voice_control/src/: voice_control.cpp
robot/ascend_car/Ascend-智能车主控ROS2源码及说明/Ascend_ws/src/voice/wheeltec_mic_ros2/: CMakeLists.txt  package.xml
robot/ascend_car/Ascend-智能车主控ROS2源码及说明/Ascend_ws/src/voice/wheeltec_mic_ros2/include/: call_recognition.h  command_recognition.h  joint.h  node_feedback.h
robot/ascend_car/Ascend-智能车主控ROS2源码及说明/Ascend_ws/src/voice/wheeltec_mic_ros2/launch/: base.launch.py
robot/ascend_car/Ascend-智能车主控ROS2源码及说明/Ascend_ws/src/voice/wheeltec_mic_ros2/src/: call_recognition.cpp  command_recognition.cpp  node_feedback.cpp
st/cplusplus/: testcase_memcpy_host_device_aysnc_cpp.sh
st/python/: testcase_part_detection.sh  testcase_xray.sh
(+813 files in other folders)
